Php app done, refactor credentials

--- a/ansible/roles/pgsql_ms/templates/pg_hba.conf.j2
+++ b/ansible/roles/pgsql_ms/templates/pg_hba.conf.j2
@@ -8,4 +8,4 @@ host    all             all             ::1/128                 md5
 
 # Replication settings
 host    replication     {{ pgsql_user }}       {{ pgsql_net }}            md5
-host    all             {{ pgsql_user }}       {{ pgsql_net }}            md5
+host    all             all                    {{ pgsql_net }}            md5
